mobile css improvements

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -1839,11 +1839,12 @@ div#video-listings .video span.duration {
 @media only screen and (max-width: 985px) {
    #upper-container div.row.header { background:none repeat scroll 0 0 #C9CCD1; }
    #upper-container div.header {width: 100%;}
-   #portal-searchbox { margin-top: 2.2em !important; margin-bottom:.6em !important}
-   div.row.header div.search { display: block; float: none; clear: both; }
-   div.row.header, div.twelve.columns.header { height: 150px; }
+   #portal-searchbox { display:none;}
+   #browse-menu, #publish-menu {margin-top: -8px; margin-left:9px; margin-right:0px;}
+   div.row.header div.search { display: none; float: none; clear: both; }
+   div.row.header, div.twelve.columns.header { height: 130px; }
    div.top-menu .header-menu-item { float: left; }
-   div.row.header a.main-title p {left:0; color: transparent}
+   div.row.header a.main-title p {left:0; }
    div.download { display: none; }
    div.unisubs-videoTab { display:none !important; }
    div.video div.rollover, div.video div.rollover p { max-width: 215px; }
