--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -1485,6 +1485,10 @@ body.template-author h2 {
   background: #F0F0F2;
 }
 
+#content {
+  margin: -2em 0.25em 2em !important;
+}
+
 #content #content-core div.row ul.formTabs {
   display: block;
   overflow: auto;
