--- a/em/skin/theme_resources/stylesheets/video.css
+++ b/em/skin/theme_resources/stylesheets/video.css
@@ -115,3 +115,8 @@ div.video-comments-title {
 .videobar span {
     cursor: pointer !important;
 }
+
+#content {
+    margin-top: -1em !important;
+}
+
