remove right column from userprefs page

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -1883,3 +1883,7 @@ body.template-logged_out .row .nine, body.template-login_form .row .nine, body.t
     width:100%;
 }
 
+body.template-usergroup-userprefs .row .nine {
+    width:100%;
+}
+
