add space line on copyright notice, on video page

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -403,6 +403,11 @@ div#copyright-citation {
     text-decoration: underline;
 }
 
+#copyrightDocumentByLine {
+    margin-top: 2em;
+    padding-bottom: 3px;
+}
+
 /* Social Networks */
 
 #lower-container span.social-title {
