--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -1596,6 +1596,7 @@ body.template-search #content dd {
 
 body.template-search em.documentAuthor {
     display: block;
+    padding-bottom: 10px;
 }
 
 body.template-search #content a:link, dd.portletItem a:link {
