add rss link on search results

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2511,3 +2511,11 @@ li.section-about-us a {
     color: #DD0000 !important;
 }
 
+#rss-subscription {
+    line-height:  normal !important;
+}
+
+body.template-search .row {
+    position: static !important;
+}
+
