--- a/em/skin/theme_resources/stylesheets/video.css
+++ b/em/skin/theme_resources/stylesheets/video.css
@@ -9,7 +9,7 @@
 }
 
 #video-title {
-	padding: 6px 0 12px 12px;
+	padding: 6px 12px 12px 12px;
 	background: #f3f3f5;
 	color: #333;
 }
@@ -18,6 +18,7 @@
 	font-size: 24px;
 	font-weight: bold;
 	margin: 0;
+        line-height:1.25em;
 }
 
  /* Video Item */
