Align vertically RSS feed image in blog section

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2277,7 +2277,7 @@ dl.portlet dt.portletHeader {
 }
 
 div.portlet-static-blog-feeds img.image-left {
-    margin-top: 0;
+    margin-top: 2px;
 }
 
 dl.portlet dt a,
