--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2231,6 +2231,7 @@ div#video-listings .video span.duration {
     padding: 1em 0;
     text-align: center;
     width: 110px;
+    height: 140px;
 }
 
 @media only screen and (max-width: 985px) {
