--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -1755,6 +1755,10 @@ input.searchPage {
   background-color: #F0F0F2;
 }
 
+body.template-search #post-content .nine {
+    width: 100%;
+}
+
 #post-header .row.text-content .post-title {
   font-size: 24px;
   font-weight: bold;
