--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2214,8 +2214,11 @@ dl#blog-portlet dd:last-child {
   height: 22px !important;
 }
 
-.icons-on .contenttype-document, .icons-on .contenttype-event, .icons-on .contenttype-folder, .icons-on .contenttype-link, .icons-on .contenttype-news-item, .icons-on .contenttype-plone-site, .icons-on .contenttype-collection, .icons-on .contenttype-topic, .icons-on #plone-contentmenu-factories .contenttype-file, .icons-on #plone-contentmenu-factories .contenttype-image {
-background: none !important;
+.contenttype-plumi-video-folder {
+    background: no-repeat transparent 0px -644px url(../../contenttypes-sprite.png);
+    line-height: 2em;
+    display: inline-block;
+    padding-left: 20px !important;
 }
 
 div#video-listings .video span.duration {
