--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2644,3 +2644,13 @@ div.sidebar-newsletter {
 .row #commenting textarea {
     height: 95px;
 }
+
+body.template-video_listing_view li {
+    display: list-item;
+}
+
+
+body.template-video_listing_view ul {
+    list-style: disc;
+}
+
