--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2055,6 +2055,10 @@ div.listingBarBottom {
     width: 231px;
 }
 
+#video-listings div.video {
+    margin-left: 9px;
+}   
+ 
 #fieldset-openid-login .formControls input, #login-form .formControls input {
   margin-left: -40px !important;
   position: relative;
