--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2657,3 +2657,11 @@ body.template-video_listing_view #video-listings ul {
     list-style: disc inside none;
 }
 
+body.template-video_view #full-description li {
+    display: list-item;
+}
+
+body.template-video_view #full-description ul {
+    list-style: disc inside none;
+}
+
