fix css issue on publish form

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -370,7 +370,9 @@ input#newsletter-input {
     display: block;
     float: left;
     background: #efeff1;
-    width: 150px;
+    width: 160px;
+    height: 27px;
+    color: #333333;
 }
 
 input#newsletter-submit {
@@ -2670,3 +2672,6 @@ body.template-video_view #full-description ul {
     list-style: decimal inside none;
 }
 
+#post-comments {
+    overflow: hidden;
+}
