fix pointer cursor on cc widget, on publish video form

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2675,3 +2675,8 @@ body.template-video_view #full-description ul {
 #post-comments {
     overflow: hidden;
 }
+
+#creative_commons_overlay {
+    cursor: pointer;
+}
+
