fix stay in touch portlet on pads and mobiles

--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -2286,6 +2286,9 @@ div#video-listings .video span.duration {
        left: 6px;
        right: auto;
    }
+   div.sidebar-newsletter {
+       clear: both;
+   }
 
 }
 
