--- a/em/skin/theme_resources/stylesheets/foundation.css
+++ b/em/skin/theme_resources/stylesheets/foundation.css
@@ -26,6 +26,23 @@ input:focus {
 
 /* Upper Container ---------------------- */
 
+.note {
+  position: relative;
+  text-align: center;
+  color: #333;
+  background: #faf9c5;
+  text-shadow: 1px 1px 1px #fff;
+  font-size: 16px;
+  border-bottom: 1px solid #bfbe78;
+  padding: 15px;
+  margin: 0;
+}
+
+a.hide-announcement {
+  float: right;
+  margin-top: -20px;
+}
+
 #upper-container {
 
 }
